@@ -10,7 +10,6 @@ jobs:
       fail-fast: false
       matrix:
         go-version:
-          - 1.21.x
           - 1.22.x
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
